modified: client/index.html client/src/components/Header.tsx client/src/components/ThemeProvider.tsx renamed: server/storage.ts to server/storag.ts

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Kelechi - JavaScript Developer • Automation Engineer • 3D Web Creator</title>
+    <title>AstralBr33d 👽 - JavaScript Developer • Automation Engineer • 3D Web Creator</title>
     <meta name="description" content="JavaScript Developer, Python Automation Engineer, and 3D/Web App Builder with 4 years of experience. I build fast, modern web experiences and intelligent automation tools for SMEs and startups." />
     <meta property="og:title" content="Kelechi - JavaScript Developer & Automation Engineer" />
     <meta property="og:description" content="Build fast, modern web experiences and intelligent automation tools. Specializing in React, TypeScript, Python, and 3D web development." />
